# mpsdp

./: Cargo.toml  LICENSE  README.md
docs/: architecture.md  shuffle_module.md
eval/amplification/: amp.ipynb
eval/attack/: LDP_poison_krr_freq.ipynb  SDP_poison_krr_freq.ipynb
eval/utility/: README.md
eval/utility/src/fire_analysis/: binary_feature_analysis.py  range_query_analysis.py  rr_comparison_analysis.py  rr_perturbation_analysis.py  time_series_analysis.py
eval/utility/src/retirement_analysis/: amp_sdp_comparison.py  data_preprocessing.py  job_family_analysis.py  targeted_analysis.py
eval/utility/src/utils/: department_simulation.py  histogram_estimation.py
examples/: basic_usage.rs  shuffle_example.rs
src/: lib.rs  schema.rs
src/client/: mod.rs
src/dp/: mechanisms.rs  mod.rs
src/multi_party/: communication.rs  crypto.rs  server.rs  share.rs
src/server/: mod.rs
src/shuffle/: error.rs  mechanism.rs  mod.rs  types.rs
test/attack/: AMP-SDP_robustness.ipynb  LDP_poison_lap_var_mean.ipynb  SDP_poison_lap_var_mean.ipynb
tests/benchmarks/: privacy_benchmarks.rs
tests/unit/: privacy_test.rs
toy/: Cargo.toml  README.md  description
toy/examples/: basic_protocol.rs  performance_test.rs
toy/src/: finite_field.rs  lib.rs  offline_phase.rs  online_phase.rs  protocol.rs  secret_sharing.rs  server.rs
