[package]
name = "doppio"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A secure and efficient framework for privacy-preserving data processing"
license = "MIT"
repository = "https://github.com/yourusername/doppio"
readme = "README.md"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
num = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
num-rational = "0.4"
num-complex = "0.4"
statrs = "0.16"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"
proptest = "1.3"
tempfile = "3.8"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true 